--- a/mkg.html
+++ b/mkg.html
@@ -351,70 +351,94 @@ u: URL</p>
 <td style="text-align: center;">b</td>
 </tr>
 <tr class="odd">
+<td style="text-align: center;">plot_color</td>
+<td style="text-align: center;">Plot line color between simple quotes (e.g: ‘cyan’,‘red’ etc.)</td>
+<td style="text-align: center;">[‘cyan’]</td>
+<td style="text-align: center;">s</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">plot_pause</td>
+<td style="text-align: center;">Number of seconds of plot display per minute of processing. Maximum 50.</td>
+<td style="text-align: center;">[5]</td>
+<td style="text-align: center;">n</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">plot_position</td>
+<td style="text-align: center;">Plot position of on monitor screen (top-left angle) in pixels e.g 0,0 or 500,500</td>
+<td style="text-align: center;">[0,0]</td>
+<td style="text-align: center;">s</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">plot_span</td>
+<td style="text-align: center;">Number of minutes of virtual disk processing to be plotted, back in time</td>
+<td style="text-align: center;">[0]</td>
+<td style="text-align: center;">n</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">plot_period</td>
+<td style="text-align: center;">Number of minutes elapsed between two successive plots</td>
+<td style="text-align: center;">[10]</td>
+<td style="text-align: center;">n</td>
+</tr>
+<tr class="even">
 <td style="text-align: center;">processor</td>
 <td style="text-align: center;">Processor type</td>
 <td style="text-align: center;">[amd64]</td>
 <td style="text-align: center;">s</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">quiet_mode</td>
 <td style="text-align: center;">Silence output except for the most severe errors.</td>
 <td style="text-align: center;">[false]</td>
 <td style="text-align: center;">b</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">logging</td>
 <td style="text-align: center;">Activate logging</td>
 <td style="text-align: center;">[true]</td>
 <td style="text-align: center;">b</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">remove_vdi</td>
 <td style="text-align: center;">Remove virtual disk on clean-up</td>
 <td style="text-align: center;">[false]</td>
 <td style="text-align: center;">b</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">rootpasswd</td>
 <td style="text-align: center;">Root password</td>
 <td style="text-align: center;">[_dev2021_]</td>
 <td style="text-align: center;">s:vm</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">rtcuseutc</td>
 <td style="text-align: center;">Use UTC as time reference: on/off</td>
 <td style="text-align: center;">[on]</td>
 <td style="text-align: center;">o</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">r_version</td>
 <td style="text-align: center;">R version</td>
 <td style="text-align: center;">[4.0.2]</td>
 <td style="text-align: center;">s</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">scsi_address</td>
 <td style="text-align: center;">In case of several optical disc burners, specify the SCSI address as x,y,z</td>
 <td style="text-align: center;">[]</td>
 <td style="text-align: center;">s</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">size</td>
 <td style="text-align: center;">Dynamic disc size</td>
 <td style="text-align: center;">[55000]</td>
 <td style="text-align: center;">n</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">smtp_url</td>
 <td style="text-align: center;">SMTP URL of email provider for end-of-job warning. Default: gmail SMTP</td>
 <td style="text-align: center;">[smtps://smtp.gmail.com:465]</td>
 <td style="text-align: center;">u</td>
-</tr>
-<tr class="odd">
-<td style="text-align: center;">span</td>
-<td style="text-align: center;">Number of minutes of virtual disk processing to be plotted, back in time</td>
-<td style="text-align: center;">[0]</td>
-<td style="text-align: center;">n</td>
 </tr>
 <tr class="even">
 <td style="text-align: center;">stage3</td>
