--- a/mkg.html
+++ b/mkg.html
@@ -12,6 +12,15 @@ Usage [4] prints this help, in markdown form if argument ‘md’ is<br />
 specified.<br />
 Warning: you should have at least 55 GB of free disk space in the<br />
 current directory or in vmpath if specified.</p>
+<p>As of tag 1st March, 2021, part of the build is performed<br />
+by <em>Github Actions</em> automatically. An ISO file of CloneZilla<br />
+supplemented with VirtualBox guest additions will be downloaded<br />
+from the resulting automated Github release. To disable this behavior<br />
+you can add <code>use_workflow=false</code> to command line, or build the<br />
+custom ISO file beforehand using the companion project<br />
+<strong>clonezilla_with_virtualbox</strong>. In this case, add:<br />
+<code>custom_clonezilla=your_build.iso</code><br />
+to command line.</p>
 <p><strong>Options:</strong></p>
 <p>Boolean values are either <code>true</code> or <code>false</code>. For example, to build<br />
 a minimal distribution, add to command line:<br />
@@ -238,250 +247,262 @@ optional strings that may remain unspecified.</p>
 <td style="text-align: center;">b</td>
 </tr>
 <tr class="even">
+<td style="text-align: center;">github_release_path</td>
+<td style="text-align: center;">URL to Github Release of clonezilla_with_virtualbox.iso</td>
+<td style="text-align: center;">[path3]</td>
+<td style="text-align: center;">s</td>
+</tr>
+<tr class="odd">
 <td style="text-align: center;">gui</td>
 <td style="text-align: center;">Binary: true corresponds to VBoxManage startvm … –type=gui, false to –type=headless</td>
 <td style="text-align: center;">[true]</td>
 <td style="text-align: center;">b</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">help</td>
 <td style="text-align: center;">This help</td>
 <td style="text-align: center;">[]</td>
 <td style="text-align: center;"></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">hot_install</td>
 <td style="text-align: center;">Intall to Gentoo attached device (like /dev/sdb) possibly mounted (like /media/USER/567EAF). To be used with <em>ext_device=…</em></td>
 <td style="text-align: center;">[false]</td>
 <td style="text-align: center;">b:ext_device</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">htmlpage</td>
 <td style="text-align: center;">Create HTML help page</td>
 <td style="text-align: center;">[false]</td>
 <td style="text-align: center;">b</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">hwvirtex</td>
 <td style="text-align: center;">Activate HWVIRTEX: on/off</td>
 <td style="text-align: center;">[on]</td>
 <td style="text-align: center;">o</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">interactive</td>
 <td style="text-align: center;">Allow interaction with user. This may cause deadlock if process is detached from the console (<em>nohup</em> or other methods)</td>
 <td style="text-align: center;">[true]</td>
 <td style="text-align: center;">b</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">ioapic</td>
 <td style="text-align: center;">IOAPIC parameter: on or off</td>
 <td style="text-align: center;">[on]</td>
 <td style="text-align: center;">o</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">kernel_config</td>
 <td style="text-align: center;">Use a custom kernel config file</td>
 <td style="text-align: center;">[.config]</td>
 <td style="text-align: center;">f</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">language</td>
 <td style="text-align: center;">Add support for non-US English language as a default. Use standard abbreviations (fr for french, es for spanish) etc.</td>
 <td style="text-align: center;">[us]</td>
 <td style="text-align: center;">s</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">lineno_patch</td>
 <td style="text-align: center;">Line patched against vbox-img.cpp in virtualbox source code</td>
 <td style="text-align: center;">[797]</td>
 <td style="text-align: center;">n</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">livecd</td>
 <td style="text-align: center;">Path to the live CD that will start the VM</td>
 <td style="text-align: center;">[gentoo.iso]</td>
 <td style="text-align: center;">f</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">logging</td>
 <td style="text-align: center;">Activate logging</td>
 <td style="text-align: center;">[true]</td>
 <td style="text-align: center;">b</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">manpage</td>
 <td style="text-align: center;">Create manpage mkg.1</td>
 <td style="text-align: center;">[false]</td>
 <td style="text-align: center;">b</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">mem</td>
 <td style="text-align: center;">VM RAM memory in MiB</td>
 <td style="text-align: center;">[8000]</td>
 <td style="text-align: center;">n</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">minimal</td>
 <td style="text-align: center;">Remove <em>libreoffice</em> and <em>data science tools</em> from default list of installed software. Boolean.</td>
 <td style="text-align: center;">[false]</td>
 <td style="text-align: center;">b</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">minimal_size</td>
 <td style="text-align: center;">Remove kernel sources to minimize packaging. Not advised for personal use but OK for deployment and distribution.</td>
 <td style="text-align: center;">[false]</td>
 <td style="text-align: center;">b</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">mirror</td>
 <td style="text-align: center;">Mirror site for downloading of stage3 tarball</td>
 <td style="text-align: center;">[path2]</td>
 <td style="text-align: center;">u</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">ncpus</td>
 <td style="text-align: center;">Number of VM CPUs. By default the third of available threads.</td>
 <td style="text-align: center;">[count]</td>
 <td style="text-align: center;">n</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">nonroot_user</td>
 <td style="text-align: center;">Non-root user</td>
 <td style="text-align: center;">[fab]</td>
 <td style="text-align: center;">s</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">pae</td>
 <td style="text-align: center;">Activate PAE: on/off</td>
 <td style="text-align: center;">[on]</td>
 <td style="text-align: center;">o</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">paravirtprovider</td>
 <td style="text-align: center;">Virtualization interface: kvm for GNU/Linux, may be tweaked (see VirtualBox documentation)</td>
 <td style="text-align: center;">[kvm]</td>
 <td style="text-align: center;">s</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">passwd</td>
 <td style="text-align: center;">User password</td>
 <td style="text-align: center;">[_user2021_]</td>
 <td style="text-align: center;">s:vm</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">pdfpage</td>
 <td style="text-align: center;">Create PDF help page</td>
 <td style="text-align: center;">[false]</td>
 <td style="text-align: center;">b</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">plot</td>
 <td style="text-align: center;">Plot VDI disk size using GNUPlot</td>
 <td style="text-align: center;">[false]</td>
 <td style="text-align: center;">b</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">plot_color</td>
 <td style="text-align: center;">Plot line color between simple quotes (e.g: ‘cyan’,‘red’ etc.)</td>
 <td style="text-align: center;">[‘cyan’]</td>
 <td style="text-align: center;">s</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">plot_pause</td>
 <td style="text-align: center;">Number of seconds of plot display per minute of processing. Maximum 50.</td>
 <td style="text-align: center;">[5]</td>
 <td style="text-align: center;">n</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">plot_period</td>
 <td style="text-align: center;">Number of minutes elapsed between two successive plots</td>
 <td style="text-align: center;">[10]</td>
 <td style="text-align: center;">n</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">plot_position</td>
 <td style="text-align: center;">Plot position of on monitor screen (top-left angle) in pixels e.g ‘0,0’ or ‘500,500’</td>
 <td style="text-align: center;">[‘0,0’]</td>
 <td style="text-align: center;">s</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">plot_span</td>
 <td style="text-align: center;">Number of minutes of virtual disk processing to be plotted, back in time</td>
 <td style="text-align: center;">[1200]</td>
 <td style="text-align: center;">n</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">processor</td>
 <td style="text-align: center;">Processor type</td>
 <td style="text-align: center;">[amd64]</td>
 <td style="text-align: center;">s</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">quiet_mode</td>
 <td style="text-align: center;">Silence output except for the most severe errors.</td>
 <td style="text-align: center;">[false]</td>
 <td style="text-align: center;">b</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">r_version</td>
 <td style="text-align: center;">R version</td>
 <td style="text-align: center;">[4.0.2]</td>
 <td style="text-align: center;">s</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">remove_vdi</td>
 <td style="text-align: center;">Remove virtual disk on clean-up</td>
 <td style="text-align: center;">[false]</td>
 <td style="text-align: center;">b</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">rootpasswd</td>
 <td style="text-align: center;">Root password</td>
 <td style="text-align: center;">[_dev2021_]</td>
 <td style="text-align: center;">s:vm</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">rtcuseutc</td>
 <td style="text-align: center;">Use UTC as time reference: on/off</td>
 <td style="text-align: center;">[on]</td>
 <td style="text-align: center;">o</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">scsi_address</td>
 <td style="text-align: center;">In case of several optical disc burners, specify the SCSI address as x,y,z</td>
 <td style="text-align: center;">[]</td>
 <td style="text-align: center;">s</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">size</td>
 <td style="text-align: center;">Dynamic disc size</td>
 <td style="text-align: center;">[55000]</td>
 <td style="text-align: center;">n</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">smtp_url</td>
 <td style="text-align: center;">SMTP URL of email provider for end-of-job warning. Default: gmail SMTP</td>
 <td style="text-align: center;">[smtps://smtp.gmail.com:465]</td>
 <td style="text-align: center;">u</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">stage3</td>
 <td style="text-align: center;">Path to stage3 archive</td>
 <td style="text-align: center;">[stage3.tar.xz]</td>
 <td style="text-align: center;">f</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: center;">usbehci</td>
 <td style="text-align: center;">Activate USB2 driver: on/off</td>
 <td style="text-align: center;">[off]</td>
 <td style="text-align: center;">o</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: center;">usbxhci</td>
 <td style="text-align: center;">Activate USB3 driver: on/off. Note: if on, needs extension pack.</td>
 <td style="text-align: center;">[off]</td>
 <td style="text-align: center;">o</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">use_workflow</td>
+<td style="text-align: center;">Use Github Actions workflow to add virtualbox guest additions to CloneZilla ISO.</td>
+<td style="text-align: center;">[true]</td>
+<td style="text-align: center;">b</td>
 </tr>
 <tr class="odd">
 <td style="text-align: center;">vm</td>
@@ -519,9 +540,15 @@ optional strings that may remain unspecified.</p>
 <td style="text-align: center;">[on]</td>
 <td style="text-align: center;">o</td>
 </tr>
+<tr class="odd">
+<td style="text-align: center;">workflow_tag</td>
+<td style="text-align: center;">Tag version (vX.Y) of the release of file clonezilla_with_virtualbox by Github Actions</td>
+<td style="text-align: center;">[v1.8]</td>
+<td style="text-align: center;">s</td>
+</tr>
 </tbody>
 </table>
 <p><strong>path1:</strong> https://sourceforge.net/projects/clonezilla/files/clonezilla_live_alternative/20200703-focal/clonezilla-live-20200703-focal-amd64.iso/download<br />
-<strong>path2:</strong> https://github.com/rstudio/rstudio/archive/v<br />
-<strong>path3:</strong> http://gentoo.mirrors.ovh.net/gentoo-distfiles/<br />
+<strong>path2:</strong> http://gentoo.mirrors.ovh.net/gentoo-distfiles/<br />
+<strong>path3:</strong> https://github.com/fabnicol/clonezilla_with_virtualbox/releases/download/<br />
 <strong>count:</strong> nproc –all / 3</p>
