Fix from vm vm=... hot_install ext_device + cheat sheet

--- a/mkg-cheatsheet.html
+++ b/mkg-cheatsheet.html
@@ -187,8 +187,8 @@
 </table>
 <table>
 <colgroup>
-<col style="width: 36%" />
-<col style="width: 63%" />
+<col style="width: 40%" />
+<col style="width: 59%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -203,7 +203,7 @@
 </tr>
 <tr class="even">
 <td style="text-align: left;"><code># mkg [...] hot_install ext_device=sdX</code></td>
-<td style="text-align: left;">Install Gentoo onto partition <strong>/dev/sdX</strong>.</td>
+<td style="text-align: left;">Install Gentoo onto partition <strong>/dev/sdX</strong> after completion of VM processes.</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;"><code># mkg from_device ext_device=sdX \ gentoo.iso</code></td>
@@ -214,7 +214,7 @@
 <td style="text-align: left;">Burn <strong>gentoo.iso</strong> to disk.</td>
 </tr>
 <tr class="odd">
-<td style="text-align: left;"><code># mkg [...] from_iso gentoo.iso \ ext_device=sdX</code></td>
+<td style="text-align: left;"><code># mkg [...] from_iso gentoo.iso \ device_installer ext_device=sdX</code></td>
 <td style="text-align: left;">Create USB stick or any block device installer from <strong>gentoo.iso</strong></td>
 </tr>
 <tr class="even">
